create a verified field and optimize the addressbook
