# pkg/oas/oas_schemas_gen.go
@@ -5589,9 +5589,10 @@ func (s *FoundAccounts) SetAddresses(val []FoundAccountsAddressesItem) {
 }
 
 type FoundAccountsAddressesItem struct {
-	Address string `json:"address"`
-	Name    string `json:"name"`
-	Preview string `json:"preview"`
+	Address  string `json:"address"`
+	Name     string `json:"name"`
+	Preview  string `json:"preview"`
+	Verified bool   `json:"verified"`
 }
 
 // GetAddress returns the value of Address.
@@ -5609,6 +5610,11 @@ func (s *FoundAccountsAddressesItem) GetPreview() string {
 	return s.Preview
 }
 
+// GetVerified returns the value of Verified.
+func (s *FoundAccountsAddressesItem) GetVerified() bool {
+	return s.Verified
+}
+
 // SetAddress sets the value of Address.
 func (s *FoundAccountsAddressesItem) SetAddress(val string) {
 	s.Address = val
@@ -5622,6 +5628,11 @@ func (s *FoundAccountsAddressesItem) SetName(val string) {
 // SetPreview sets the value of Preview.
 func (s *FoundAccountsAddressesItem) SetPreview(val string) {
 	s.Preview = val
+}
+
+// SetVerified sets the value of Verified.
+func (s *FoundAccountsAddressesItem) SetVerified(val bool) {
+	s.Verified = val
 }
 
 // Ref: #/components/schemas/GasLimitPrices
